# aoc2022

./: LICENSE  README.md  pyproject.toml
aoc2022/: day1.py  day2.py
