[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Jonathon Williams <gandalf72487@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"

[tool.poetry.scripts]
day1 = "aoc2022.day1:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
